CQRS library working version 1 draft - #major