@@ -1,25 +1,37 @@
 package pg.lib.cqrs.command;
 
-import lombok.AllArgsConstructor;
 import pg.lib.cqrs.exception.CommandHandlerNotFoundException;
+import pg.lib.cqrs.util.ClassUtils;
 
-import java.util.List;
+import java.util.Collection;
+import java.util.HashMap;
+import java.util.Map;
 
-@AllArgsConstructor
+import static java.util.Objects.isNull;
+
+@SuppressWarnings({"unchecked", "rawtypes"})
 public class DefaultCommandExecutor implements CommandExecutor {
+    private final Map<Class<?>, CommandHandler> commandHandlers;
 
-    private final List<CommandHandler<Command<?>, ?>> commandHandlers;
+    public DefaultCommandExecutor(final Collection<CommandHandler> commandHandlers) {
+        this.commandHandlers = new HashMap<>();
+        commandHandlers.forEach(this::addCommandHandler);
+    }
 
-    public <T> T execute(final Command<T> command) throws CommandHandlerNotFoundException {
+    @Override
+    public <CommandResult, CommandType extends Command<CommandResult>>
+    CommandResult execute(CommandType command) throws CommandHandlerNotFoundException {
 
-//        Optional<CommandHandler<Command<T>, T>> commandHandler = commandHandlers.stream()
-//                .filter(handler -> handler instanceof CommandHandler<Command<T>, T>)
-//                .findFirst();
-//
-//        if (commandHandler.isEmpty())
-//            throw new CommandHandlerNotFoundException(String.format("Command Handler for Command: %s - not found", command.getClass()));
-//
-//        return commandHandler.get().handle(command);
-        return null;
+        final CommandHandler<CommandType, CommandResult> commandHandler = commandHandlers.get(command.getClass());
+
+        if (isNull(commandHandler)) {
+            throw new CommandHandlerNotFoundException("Command Handler for Command: %s - not found".formatted(command.getClass()));
+        }
+
+        return commandHandler.handle(command);
+    }
+
+    private void addCommandHandler(final CommandHandler handler) {
+        this.commandHandlers.put(ClassUtils.findInterfaceParameterType(handler.getClass(), CommandHandler.class, 0), handler);
     }
 }
